
?? ??? 2007 - trunk
-------------------

 * Removed CGI style HTTP_* variables in favor of REQUEST_HEADERS:Header-Name.

 * Store filename/line for each rule and display it and the ID (if available)
   in the debug log when invoking a rule.  Thanks to Christian Bockermann
   for the idea.

 * Do not log 'allow' action as intercepted in the debug log.

 * Write debug log messages when "capture" is set, but the regex does not
   capture and vice-versa.

 * Small performance improvement in memory management for rule execution.

 * Fixed some collection variable names not printing with the parameter
   and/or counting operator in the debug log.


05 Apr 2007 - 2.1.1-rc2
-----------------------

 * Add the PCRE_DOLLAR_ENDONLY option when compiling regular expression
   for the @rx operator and variables.
  
 * Really set PCRE_DOTALL option when compiling the regular expression
   for the @rx operator as the docs state.


11 Mar 2007 - 2.1.1-rc1
-----------------------

 * Fixed potential memory corruption when expanding macros.

 * Fixed error when a collection var was fetched in the same second as creation
   by setting the rate to zero.

 * Fixed ASCIIZ (NUL) parsing for application/x-www-form-urlencoded forms

 * Fixed the faulty REQUEST_FILENAME variable, which used to change
   the internal Apache structures by mistake.

 * Updates to quiet some compiler warnings.

 * Fixed some casting issues for compiling on NetWare (patch from Guenter Knauf).


23 Feb 2007 - 2.1.0
-------------------

 * Removed the "Connection reset by peer" message, which has nothing
   to do with us. Actually the message was downgraded from ERROR to
   NOTICE so it will still appear in the debug log.

 * Removed the (harmless) message mentioning LAST_UPDATE_TIME missing.

 * It was not possible to remove a rule placed in phase 4 using
   SecRuleRemoveById or SecRuleRemoveByMsg. Fixed.

 * Fixed a problem with incorrectly setting requestBodyProcessor using
   the ctl action.
