@@ -2,6 +2,9 @@
 ?? ??? 2007 - trunk
 -------------------
 
+ * Added SecAuditLog2 directive to allow redundent concurrent audit log
+   index files.  This will allow sending audit data to two consoles, etc.
+
  * Removed CGI style HTTP_* variables in favor of REQUEST_HEADERS:Header-Name.
 
  * Store filename/line for each rule and display it and the ID (if available)
